manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82249961-ingress"
spec:
  ingressClassName: nginx
  rules:
  - host: "app.ce-82249961-sa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-82249961
            port:
              number: 8080
        pathType: Prefix
